Add div for banner photo

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,7 @@
-<div class="index_bgcolor">
-	<h1>Welcome#index</h1>
-    <p>Find me in app/views/welcome/index.html.erb</p>
+<div class="index_bgcolor container-fluid">
+	<h1>Welcome</h1>
+</div>
+<div class="container-fluid banner_container">
+	<%= image_tag "/images/American_flag-1.jpeg", class: "banner" %>
+	
 </div>
