added some styles to the welcome page

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -3,3 +3,15 @@
  font-family: 'Raleway', sans-serif;
  text-align: center;
 }
+.index_header{
+	margin: 0rem;
+}
+.banner_container{
+	padding-left: 0;
+	padding-right: 0;
+	height: 50%;
+}
+.banner{
+	width: 100%;
+	background-size: cover;
+}
