changed header text and class of index_header

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,6 @@
-<div class="index_bgcolor container-fluid">
-	<h1>Welcome</h1>
+<div class="container-fluid index_bgcolor">
+	<h1 class="index_header">Welcome to V.E.T.</h1>
 </div>
 <div class="container-fluid banner_container">
-	<%= image_tag "/images/American_flag-1.jpeg", class: "banner" %>
-	
+	<%= image_tag "American_flag-1.jpeg", class: "banner" %>
 </div>
