--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,22 @@
 <div class="container-fluid index_bgcolor">
 	<h1 class="index_header">Welcome to V.E.T.</h1>
 </div>
-<div class="container-fluid banner_container">
+<div class="banner_container container-fluid">
 	<%= image_tag "American_flag-1.jpeg", class: "banner" %>
+</div>
+<div class="container-fluid">
+  <div class="row mid_grid">
+    <div class="col-4 col_style">
+      <h1 class="col_head">1 of 3</h1>
+				<p class="col_para">Quisque in scelerisque arcu. Phasellus dapibus tincidunt est. In eu gravida mi, vitae egestas lorem. Nulla ultrices venenatis lectus, et dictum magna.</p>    	
+    </div>
+    <div class="col-4 col_style">
+      <h1 class="col_head">2 of 3</h1>
+				<p class="col_para">Duis vitae dui urna. Sed varius justo a enim tempor, sed blandit metus semper. Nullam dignissim porta nibh, vel tempor neque pulvinar ut.</p>
+    </div>
+    <div class="col-4 col_style">
+      <h1 class="col_head">3 of 3</h1>
+				<p class="col_para">Curabitur ullamcorper orci at iaculis tincidunt. Donec convallis tellus sapien, eget porta eros luctus et. Fusce condimentum lacus in aliquam gravi</p>
+    </div>
+  </div>
 </div>
