--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,12 @@
 
  *= require_tree .
  *= require_self
+ *= require font-awesome
+
  */
-  @import "bootstrap"
+ 
+ @import "bootstrap";
+ @import "font-awesome";
+
+ 
+
