--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,14 +7,17 @@
 <div class="container-fluid">
   <div class="row mid_grid">
     <div class="col-4 col_style">
-      <h1 class="col_head">1 of 3</h1>
+      <i class="fa fa-user fa-5x"></i>
+        <h1 class="col_head">1 of 3</h1>
 				<p class="col_para">Quisque in scelerisque arcu. Phasellus dapibus tincidunt est. In eu gravida mi, vitae egestas lorem. Nulla ultrices venenatis lectus, et dictum magna.</p>    	
     </div>
     <div class="col-4 col_style">
+      <i class="fa fa-user fa-5x"></i>
       <h1 class="col_head">2 of 3</h1>
 				<p class="col_para">Duis vitae dui urna. Sed varius justo a enim tempor, sed blandit metus semper. Nullam dignissim porta nibh, vel tempor neque pulvinar ut.</p>
     </div>
     <div class="col-4 col_style">
+      <i class="fa fa-tag fa-5x"></i>
       <h1 class="col_head">3 of 3</h1>
 				<p class="col_para">Curabitur ullamcorper orci at iaculis tincidunt. Donec convallis tellus sapien, eget porta eros luctus et. Fusce condimentum lacus in aliquam gravi</p>
     </div>
