--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,9 @@
 <div class="container-fluid index_bgcolor">
 	<h1 class="index_header">Welcome to V.E.T.</h1>
 </div>
+
+<!-- header -->
+
 <div class="banner_container container-fluid">
 	<%= image_tag "American_flag-1.jpeg", class: "banner" %>
 </div>
@@ -11,15 +14,33 @@
         <h1 class="col_head">1 of 3</h1>
 				<p class="col_para">Quisque in scelerisque arcu. Phasellus dapibus tincidunt est. In eu gravida mi, vitae egestas lorem. Nulla ultrices venenatis lectus, et dictum magna.</p>    	
     </div>
+
+    <!-- column 1 -->
+
     <div class="col-4 col_style">
       <i class="fa fa-user fa-5x"></i>
       <h1 class="col_head">2 of 3</h1>
 				<p class="col_para">Duis vitae dui urna. Sed varius justo a enim tempor, sed blandit metus semper. Nullam dignissim porta nibh, vel tempor neque pulvinar ut.</p>
+
+    <!-- column 2 -->
     </div>
+
     <div class="col-4 col_style">
       <i class="fa fa-tag fa-5x"></i>
       <h1 class="col_head">3 of 3</h1>
 				<p class="col_para">Curabitur ullamcorper orci at iaculis tincidunt. Donec convallis tellus sapien, eget porta eros luctus et. Fusce condimentum lacus in aliquam gravi</p>
     </div>
+
+    <!-- column 3 -->
+
   </div>
+
+  <!-- row -->
+
+</div>
+
+<!-- container -->
+<div data-relative-input="true" class="container-fluid scene parallax_filter">
+  <div data-depth="0.2">My first Layer!</div>
+  <div data-depth="0.6">My second Layer!</div>
 </div>
