added bootstrap carousel and edited some bootstrap column

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -7,6 +7,10 @@
 	margin: 0rem;
 	font-size: 5em;
 }
+
+.carousel-inner{
+	height: 15rem;
+}
 .banner_container{
 	padding-left: 0px;
 	padding-right: 0px;
@@ -17,6 +21,8 @@
   height: 15.5rem;
   margin-right: -30px;
 }
+
+
 .mid_grid{
 	text-align: center;
 }
