--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,36 +4,60 @@
 
 <!-- header -->
 
-<div class="banner_container container-fluid">
-	<%= image_tag "American_flag-1.jpeg", class: "banner" %>
+<div id="carouselExampleIndicators" class="carousel slide banner" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag 'salute.jpg', class: "d-block w-100", alt: "first slide"%>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag 'soldiers.jpg', class: "d-block w-100", alt: "second slide"%>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag 'spec-ops.jpg', class: "d-block w-100", alt: "third slide"%>
+    </div>
+  </div>
 </div>
+
 <div class="container-fluid">
   <div class="row mid_grid">
     <div class="col-4 col_style">
       <i class="fa fa-user fa-5x"></i>
         <h1 class="col_head">1 of 3</h1>
 				<p class="col_para">Quisque in scelerisque arcu. Phasellus dapibus tincidunt est. In eu gravida mi, vitae egestas lorem. Nulla ultrices venenatis lectus, et dictum magna.</p>    	
-    </div>
+    
 
     <!-- column 1 -->
 
-    <div class="col-4 col_style">
+    
       <i class="fa fa-user fa-5x"></i>
       <h1 class="col_head">2 of 3</h1>
 				<p class="col_para">Duis vitae dui urna. Sed varius justo a enim tempor, sed blandit metus semper. Nullam dignissim porta nibh, vel tempor neque pulvinar ut.</p>
 
     <!-- column 2 -->
-    </div>
+    
 
-    <div class="col-4 col_style">
+    
       <i class="fa fa-tag fa-5x"></i>
       <h1 class="col_head">3 of 3</h1>
 				<p class="col_para">Curabitur ullamcorper orci at iaculis tincidunt. Donec convallis tellus sapien, eget porta eros luctus et. Fusce condimentum lacus in aliquam gravi</p>
-    </div>
+    
 
     <!-- column 3 -->
+    </div>
 
+    <div class="col-8 col_style">
+      <h1 class="col_head">Big Column</h1>
+        <p class="col_para">Curabitur ullamcorper orci at iaculis tincidunt. Donec convallis tellus sapien, eget porta eros luctus et. Fusce condimentum lacus in aliquam gravi Curabitur ullamcorper orci at iaculis tincidunt. Donec convallis tellus sapien, eget porta eros luctus et. Fusce condimentum lacus in aliquam gravi Curabitur ullamcorper orci at iaculis tincidunt. Donec convallis tellus sapien, eget porta eros luctus et. Fusce condimentum lacus in aliquam gravi</p>
+    </div>
   </div>
+
+
+
 
   <!-- row -->
 
