--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -8,8 +8,11 @@
 	font-size: 5em;
 }
 
+#carousel{
+	height: 70;
+}
 .carousel-inner{
-	height: 15rem;
+	width: 100;
 }
 .banner_container{
 	padding-left: 0px;
@@ -17,14 +20,15 @@
 	height: 50%;
 }
 .banner{
-	width: 100%;
-  height: 15.5rem;
-  margin-right: -30px;
+
 }
 
 
 .mid_grid{
 	text-align: center;
+}
+.box1{
+	border: 2px;
 }
 .col_style{
 	text-align: center;
