made a new grid system (col-4 x col-8)

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,9 +26,12 @@
 <div class="container-fluid">
   <div class="row mid_grid">
     <div class="col-4 col_style">
+      <div class="container-fluid box1">
       <i class="fa fa-user fa-5x"></i>
         <h1 class="col_head">1 of 3</h1>
-				<p class="col_para">Quisque in scelerisque arcu. Phasellus dapibus tincidunt est. In eu gravida mi, vitae egestas lorem. Nulla ultrices venenatis lectus, et dictum magna.</p>    	
+        <p class="col_para">Quisque in scelerisque arcu. Phasellus dapibus tincidunt est. In eu gravida mi, vitae egestas lorem. Nulla ultrices venenatis lectus, et dictum magna.</p>    
+      </div>
+      	
     
 
     <!-- column 1 -->
