--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,10 +10,10 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Veteran Support</a>
+        <a class="nav-link" href="#">Veteran Entrepreneurship</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">V.E.T. Radio</a>
+        <%= link_to "V.E.T. Radio", welcome_radio_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
         <%= link_to "About", welcome_about_path, class: 'nav-link' %>
