Fixed text for one of the buttons (rename)

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Veteran Support</a>
+        <a class="nav-link" href="#">Veteran Entrepreneurship</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">V.E.T. Radio</a>
