--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -57,7 +57,7 @@
 }
 
 .carousel-item:hover .img{
-	opacity: 0.5;
+	opacity: 0.8;
 }
 
 .carousel-item:hover .imagelayer{
@@ -77,6 +77,7 @@
 }
 .box1{
 	border: 2px;
+	padding-bottom: 1em;
 }
 .col_style{
 	text-align: center;
