--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -45,28 +45,33 @@
 
   <div class="row mid_grid">
     <div class="col-4 col_style">
-      <div class="container-fluid box1">
+      <div class="container box1">
       <i class="fa fa-user fa-5x "></i>
         <h1 class="col_head">Sign-up</h1>
-        <p class="col_para">Quisque in scelerisque arcu. Phasellus dapibus tincidunt est. In eu gravida mi, vitae egestas lorem. Nulla ultrices venenatis lectus, et dictum magna.</p>    
+        <p class="col_para">Quisque in scelerisque arcu. Phasellus dapibus tincidunt est. In eu gravida mi, vitae egestas lorem. Nulla ultrices venenatis lectus, et dictum magna.</p>
+        <button type="button" class="btn btn-primary linkbutton"><%= link_to "Sign-up"%></button>    
       </div>
       	
     
 
     <!-- column 1 -->
 
-    
+    <div class="container box1">
       <i class="fa fa-headphones fa-5x"></i>
       <h1 class="col_head">Listen</h1>
 				<p class="col_para">Duis vitae dui urna. Sed varius justo a enim tempor, sed blandit metus semper. Nullam dignissim porta nibh, vel tempor neque pulvinar ut.</p>
+        <button type="button" class="btn btn-primary linkbutton"><%= link_to "Listen"%></button>
+    </div>
 
     <!-- column 2 -->
     
 
-    
+    <div class="container box1">
       <i class="fa fa-tag fa-5x"></i>
       <h1 class="col_head">Shop</h1>
 				<p class="col_para">Curabitur ullamcorper orci at iaculis tincidunt. Donec convallis tellus sapien, eget porta eros luctus et. Fusce condimentum lacus in aliquam gravi</p>
+        <button type="button" class="btn btn-primary linkbutton"><%= link_to "Shop"%></button>
+      </div>
     
 
     <!-- column 3 -->
@@ -79,14 +84,3 @@
   </div>
 
 
-
-
-  <!-- row -->
-
-</div>
-
-<!-- container -->
-<div data-relative-input="true" class="container-fluid scene parallax_filter">
-  <div data-depth="0.2">My first Layer!</div>
-  <div data-depth="0.6">My second Layer!</div>
-</div>
