made a new page for radio portion of site: working link in header, radio method in controller, and radio path in routes

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
         <a class="nav-link" href="#">Veteran Entrepreneurship</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">V.E.T. Radio</a>
+        <%= link_to "V.E.T. Radio", welcome_radio_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
         <%= link_to "About", welcome_about_path, class: 'nav-link' %>
