--- a/app/views/welcome/radio.html.erb
+++ b/app/views/welcome/radio.html.erb
@@ -1,1 +1,5 @@
-<h1>Welcome to V.E.T. Radio</h1>
+<div class="container-fluid">
+	<div class="">
+		<h1 class="radiohead">Welcome to V.E.T. Radio</h1>
+	</div>
+</div>
