--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -46,7 +46,7 @@
   <div class="row mid_grid">
     <div class="col-4 col_style">
       <div class="container box1">
-      <i class="fa fa-user fa-5x "></i>
+      <i class="fa fa-user fa-5x iconborder"></i>
         <h1 class="col_head">Sign-up</h1>
         <p class="col_para">Quisque in scelerisque arcu. Phasellus dapibus tincidunt est. In eu gravida mi, vitae egestas lorem. Nulla ultrices venenatis lectus, et dictum magna.</p>
         <button type="button" class="btn btn-primary linkbutton"><%= link_to "Sign-up"%></button>    
@@ -57,7 +57,7 @@
     <!-- column 1 -->
 
     <div class="container box1">
-      <i class="fa fa-headphones fa-5x"></i>
+      <i class="fa fa-headphones fa-5x iconborder"></i>
       <h1 class="col_head">Listen</h1>
 				<p class="col_para">Duis vitae dui urna. Sed varius justo a enim tempor, sed blandit metus semper. Nullam dignissim porta nibh, vel tempor neque pulvinar ut.</p>
         <button type="button" class="btn btn-primary linkbutton"><%= link_to "Listen"%></button>
@@ -67,7 +67,7 @@
     
 
     <div class="container box1">
-      <i class="fa fa-tag fa-5x"></i>
+      <i class="fa fa-tag fa-5x iconborder"></i>
       <h1 class="col_head">Shop</h1>
 				<p class="col_para">Curabitur ullamcorper orci at iaculis tincidunt. Donec convallis tellus sapien, eget porta eros luctus et. Fusce condimentum lacus in aliquam gravi</p>
         <button type="button" class="btn btn-primary linkbutton"><%= link_to "Shop"%></button>
