work on styling of radio page. DOnt like it. CHanging to single column instead of col-8/col-4

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -80,7 +80,8 @@
 	padding-top: 1em;
 }
 .iconborder{
-	border-bottom: .05em solid;
+	border-bottom: .15em solid;
+	padding-bottom: 1.5em;
 }
 .col_style{
 	text-align: center;
@@ -88,6 +89,7 @@
 }
 .col_head{
 	 font-family: 'Raleway', sans-serif;
+	 padding-top: 1em;
 }
 .col_para{
 	padding: .5em;
