--- a/app/views/welcome/radio.html.erb
+++ b/app/views/welcome/radio.html.erb
@@ -1,5 +1,9 @@
 <div class="container-fluid">
-	<div class="">
-		<h1 class="radiohead">Welcome to V.E.T. Radio</h1>
+	<div class="row mid_grid">
+    <div class="col-8">
+			<h1 class="radiohead">Welcome to V.E.T. Radio</h1>
+	  </div>
+	<div class="col-4">
+		<%= image_tag 'vetlogo.png', alt: "vet logo" %>
 	</div>
 </div>
